--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,10 +1,22 @@
-.home .contenedorHome{
-    background-color: white;
-    border-radius: 5px;
-}
-
 .home h2{
     font-size: 3.0vw;
     text-align: center;
     color: black;
+    background-color: #F85931;
+    border-radius: 1rem;
+}
+
+.buttonHome{
+    background-color: #F85931;
+    color: black;
+    width: 100%;
+}
+
+.buttonHome:hover{
+    background-color: #CE1836;
+    color: white;
+}
+
+.buttonHome:focus{
+    background-color: #CE1836;
 }
